add routing and flex and grid examples

--- a/src/app/padre/padre.component.scss
+++ b/src/app/padre/padre.component.scss
@@ -60,14 +60,14 @@
 .full-height {
   width: 300px;
   background: red;
-  height: 100vh; //View Height
+ // height: 100vh; //View Height
   //  width: 100vw;
 }
 
 .medium-height {
   width: 300px;
   background: blue;
-  height: 50vw;
+ // height: 50vw;
   // width: 50vw;
 }
 .height10 {
