--- a/src/app/responsive/responsive.component.html
+++ b/src/app/responsive/responsive.component.html
@@ -1,3 +1,8 @@
+<h1>Css Unidades</h1>
+<app-padre></app-padre>
+
+<h1>Diseño Responsive</h1>
+
 <main>
   <div>Esto es un texto</div>
   <div>Esto es un texto</div>
