--- a/src/app/padre/padre.component.html
+++ b/src/app/padre/padre.component.html
@@ -1,20 +1,20 @@
-<!-- <p class="clase-generica">padre works!</p> -->
+<p class="clase-generica">padre works!</p>
 
-<!-- <h2>Unidades CSS</h2>
+<h2>Unidades CSS</h2>
 <p class="rem">Rem</p>
 <p class="rem2">2Rem</p>
 
 ---------------------------------
 <div class="padre">
   <p class="em">em</p>
-</div> -->
+</div>
 
 <div class="abuelo">
-<div class="divs">
-  <div class="full-width"></div>
-  <div class="medium-width"></div>
-  <div class="width10"></div>
-</div>
+  <div class="divs">
+    <div class="full-width"></div>
+    <div class="medium-width"></div>
+    <div class="width10"></div>
+  </div>
 </div>
 <div class="divs-height">
   <div class="full-height"></div>
