add grid and flex explanation

--- a/src/app/flex-y-grid/flex-y-grid.component.html
+++ b/src/app/flex-y-grid/flex-y-grid.component.html
@@ -1,6 +1,8 @@
 <hr />
 <nav>
-  <li><a routerLink="flexbox">Flex</a></li>
-  <li><a routerLink="grid">Grid</a></li>
+  <li><a routerLink="flexbox-explanation">Flex</a></li>
+  <li><a routerLink="flexbox">Flex Example</a></li>
+  <li><a routerLink="grid-explanation">Grid</a></li>
+  <li><a routerLink="grid">Grid Example</a></li>
 </nav>
 <router-outlet></router-outlet>
