--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     <a routerLink="unidades-y-responsive">Unidades y Diseño Responsive</a>
   </li>
   <li><a routerLink="flexbox-y-grid">Flexbox & Grid</a></li>
+  <li><a routerLink="sass">Sass</a></li>
 </nav>
 <router-outlet></router-outlet>
