--- a/src/app/flex-y-grid/grid/grid.component.scss
+++ b/src/app/flex-y-grid/grid/grid.component.scss
@@ -40,7 +40,7 @@ p {
 @media (max-width: 600px) {
   .container {
     grid-gap: 0;
-    grid-template-rows: auto 1fr auto auto;
+    grid-template-rows: auto 2fr 1fr auto;
     grid-template-columns: 1fr;
     grid-template-areas:
       "header "
