--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
   </li>
   <li><a routerLink="flexbox-y-grid">Flexbox & Grid</a></li>
   <li><a routerLink="sass">Sass</a></li>
+  <li><a routerLink="javascript">Javascript</a></li>
 </nav>
 <router-outlet></router-outlet>
