--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
   <li><a routerLink="flexbox-y-grid">Flexbox & Grid</a></li>
   <li><a routerLink="sass">Sass</a></li>
   <li><a routerLink="javascript">Javascript</a></li>
+  <li><a routerLink="typescript">Typescript</a></li>
 </nav>
 <router-outlet></router-outlet>
